# etl_show_case

./: .dbt_env  .pg_env  Dockerfile  Dockerfile.pg  README.md  clean.sh  dbt_project.yml  docker-compose.yml  extract.py  init_db.sql  pyproject.toml  selectors.yml
.dbt/: profiles.yml
data/: 20201001220037_products.csv  20201001220144_contracts.csv  20201101220035_products.csv  20201101230133_contracts.csv  20201201220034_products.csv  20201201220059_contracts.csv  20201201220101_prices.csv  20210101220045_products.csv  20210101220057_prices.csv
